# Stardrive

./: CMakeLists.txt  CONTRIBUTING.md  README.md  meson.build
cmake/: DubPackage.cmake
source/: CMakeLists.txt  CMakePresets.json  assetpak.d  meson.build
source/posix/: fd.d  fdmode.c  unix_fd.c
source/star/: assets.d  pak.d  sbasset.d  sbon.d  stream.d  vlq.d
source/star/stream/: file.d  istream.d  package.d
